limit width of rows

--- a/index.html
+++ b/index.html
@@ -4,43 +4,45 @@ title: Ilja Tkachuk
 ---
 
 <div class="app-header">
-  <!-- Navbar -->
-  <div class="app-nav">
-    <!--a href="/" class="btn btn-default tnsl-flicker" role="button">
-      <strong>HOME</strong>
-      <span class="fa fa-home fa-2x"></span>
-    </a-->
-    <div class="dropdown tnsl-flickerQuick">
-      <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-        <strong>MENU</strong>
-        <span class="fa fa-bars fa-2x"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#summary">Summary</a></li>
-        <li class="divider"></li>
-        <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
-        <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
-        <li class="divider"></li>
-        <li><a href="mailto:tim4CF@gmail.com">Email</a></li>
-        <li class="divider"></li>
-        <li><a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">Linkedin</a></li>
-        <li><a href="https://www.facebook.com/llstrainll" target="_blank">Facebook</a></li>
-        <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
-      </ul>
+  <div class="row">
+    <!-- Navbar -->
+    <div class="app-nav">
+      <!--a href="/" class="btn btn-default tnsl-flicker" role="button">
+        <strong>HOME</strong>
+        <span class="fa fa-home fa-2x"></span>
+      </a-->
+      <div class="dropdown tnsl-flickerQuick">
+        <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <strong>MENU</strong>
+          <span class="fa fa-bars fa-2x"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#summary">Summary</a></li>
+          <li class="divider"></li>
+          <li><a href="https://github.com/timCF" target="_blank">Github</a></li>
+          <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
+          <li class="divider"></li>
+          <li><a href="mailto:tim4CF@gmail.com">Email</a></li>
+          <li class="divider"></li>
+          <li><a href="https://ru.linkedin.com/in/ilya-tkachuk-a59a30aa" target="_blank">Linkedin</a></li>
+          <li><a href="https://www.facebook.com/llstrainll" target="_blank">Facebook</a></li>
+          <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
+        </ul>
+      </div>
     </div>
+    <!-- Ava -->
+    <div class="app-main-ava app-img center-block animated flipInX hidden"></div>
+    <!-- My name -->
+    <div class="text-center app-myname-margin">
+      <span id="app-myname"></span>
+    </div>
+    <!-- Short summury -->
+    <p class="short-summury text-center tnsl-flickerQuick">
+      <span id="short-summury">
+        Erlang, Elixir, OTP developer. Functional programming enthusiast.
+      </span>
+    </p>
   </div>
-  <!-- Ava -->
-  <div class="app-main-ava app-img center-block animated flipInX hidden"></div>
-  <!-- My name -->
-  <div class="text-center app-myname-margin">
-    <span id="app-myname"></span>
-  </div>
-  <!-- Short summury -->
-  <p class="short-summury text-center tnsl-flickerQuick">
-    <span id="short-summury">
-      Erlang, Elixir, OTP developer. Functional programming enthusiast.
-    </span>
-  </p>
 </div>
 
 <!-- Long summury -->
