--- a/index.html
+++ b/index.html
@@ -50,10 +50,11 @@ title: Ilja Tkachuk
   <div class="row jumbotron app-block">
     <div class="col-md-6 app-block">
       <div class="page-header no-margin-top">
-        <h1>About me</h1>
+        <h1>Summary</h1>
       </div>
       <p>
-        Hello!
+        Hello stranger, nice to meet you!
+        Sit down, relax and have a cup of Erlang.
         My name is Ilja Tkachuk (also known as timCF).
         I'm backend software developer, live in Tallinn, Estonia.
         <br><br>
@@ -67,11 +68,15 @@ title: Ilja Tkachuk
         Of course in commercial development I'm using mainstream frameworks like OTP, Phoenix and Ecto.
         <br><br>
         Future plans - to become more familiar with static-typed functional languages like Haskell.
-        If static-typed languages for BEAM/Erlang VM (like Elchemy or Alpaca) will be successful - I will be happy to switch.
+        If static-typed languages for BEAM/Erlang VM like
+        <a href="https://github.com/wende/elchemy" target="_blank" class="text-info">Elchemy</a>
+        or
+        <a href="https://github.com/alpaca-lang/alpaca" target="_blank" class="text-info">Alpaca</a>
+        will be successful - I will be happy to switch.
       </p>
     </div>
     <div class="col-md-6 app-block">
-      <img src="/img/ava/ava4.jpg" class="img-responsive img-center app-img"/>
+      <img src="/img/lfe-logo.png" class="img-responsive img-center"/>
     </div>
   </div>
 </div>
