--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ title: Ilja Tkachuk
           {% for pref in site.data.preferences_positive %}
             <li class="list-group-item inline-wrapper">
               <img src="{{ pref.icon }}" class="app-icon inline">
-              <button class="btn btn-success inline">{{ pref.title }}</button>
+              <button class="btn btn-success disabled inline">{{ pref.title }}</button>
             </li>
             <li class="list-group-item small-vertical-margin">
               <span>{{ pref.note }}</span>
@@ -114,7 +114,7 @@ title: Ilja Tkachuk
           {% for pref in site.data.preferences_negative %}
             <li class="list-group-item inline-wrapper">
               <img src="{{ pref.icon }}" class="app-icon inline">
-              <button class="btn btn-danger inline">{{ pref.title }}</button>
+              <button class="btn btn-danger disabled inline">{{ pref.title }}</button>
             </li>
             <li class="list-group-item small-vertical-margin">
               <span>{{ pref.note }}</span>
