change ava animation

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ title: Ilja Tkachuk
       </div>
     </div>
     <!-- Ava -->
-    <div class="app-main-ava center-block tnsl-flicker magictime vanishIn hidden"></div>
+    <div class="app-main-ava center-block tnsl-flickerQuick magictime vanishIn hidden"></div>
     <!-- My name -->
     <div class="text-center app-myname-margin">
       <span id="app-myname"></span>
