--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: Ilja Tkachuk
           {% for pref in site.data.preferences_positive %}
             <li class="list-group-item inline-wrapper">
               <img src="{{ pref.icon }}" class="app-icon inline">
-              <button class="btn btn-success disabled inline">{{ pref.title }}</button>
+              <div class="btn btn-success disabled inline">{{ pref.title }}</div>
             </li>
             <li class="list-group-item small-vertical-margin">
               <span>{{ pref.note }}</span>
@@ -113,7 +113,7 @@ title: Ilja Tkachuk
           {% for pref in site.data.preferences_negative %}
             <li class="list-group-item inline-wrapper">
               <img src="{{ pref.icon }}" class="app-icon inline">
-              <button class="btn btn-danger disabled inline">{{ pref.title }}</button>
+              <div class="btn btn-danger disabled inline">{{ pref.title }}</div>
             </li>
             <li class="list-group-item small-vertical-margin">
               <span>{{ pref.note }}</span>
