add official CV

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ title: Ilja Tkachuk
           <li><a href="https://github.com/timCF?tab=repositories" target="_blank">Github</a></li>
           <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
           <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
+          <li><a href="official.html" target="_blank">CV-official</a></li>
         </ul>
       </div>
     </div>
