refactor, move some content to yml, rename PDF CV

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: Ilja Tkachuk
     <!-- Short summury -->
     <p class="short-summury text-center tnsl-flickerQuick">
       <span id="short-summury">
-        Erlang, Elixir, OTP developer. Functional programming enthusiast.
+        {{ site.data.content.my_subtitle }}
       </span>
     </p>
   </div>
@@ -55,21 +55,11 @@ title: Ilja Tkachuk
         My name is Ilja Tkachuk (also known as timCF).
         I'm backend software developer, live in Tallinn, Estonia.
         <br><br>
-        I have been programming since 2012.
-        At the beginning I had some experience of development in imperative languages like C++ and JavaScript,
-        but I did well only when I switched to functional languages like Erlang and Elixir.
+        {{ site.data.content.summary_p1 }}
         <br><br>
-        Today my main skill is functional backend programming
-        and I'm strong expert in BEAM/Erlang VM platform, Erlang and Elixir languages.
-        I have strong understanding of multithreading and interaction between Erlang processes.
-        Of course in commercial development I'm using mainstream frameworks like OTP, Phoenix and Ecto.
+        {{ site.data.content.summary_p2 }}
         <br><br>
-        Future plans - to become more familiar with static-typed functional languages like Haskell.
-        If static-typed languages for BEAM/Erlang VM like
-        <a href="https://github.com/wende/elchemy" target="_blank" class="text-info">Elchemy</a>
-        or
-        <a href="https://github.com/alpaca-lang/alpaca" target="_blank" class="text-info">Alpaca</a>
-        will be successful - I will be happy to switch.
+        {{ site.data.content.summary_p3 }}
       </p>
     </div>
     <div class="col-md-6 app-block">
