--- a/index.html
+++ b/index.html
@@ -149,9 +149,16 @@ title: Ilja Tkachuk
     {% for project in site.data.projects %}
       <div class="col-sm-6">
         <div>
-          <a class="btn btn-primary small-vertical-margin micro-horizontal-margin" href={{ project.github }} target="_blank">{{project.name}}</a>
+          {% if project.github %}
+            <a class="btn btn-primary small-vertical-margin micro-horizontal-margin" href={{ project.github }} target="_blank">{{project.name}}</a>
+          {% endif %}
           {% if project.demo %}
-            <a class="btn btn-info small-vertical-margin micro-horizontal-margin" href={{ project.demo }} target="_blank">demo</a>
+            {% if project.github %}
+              <a class="btn btn-info small-vertical-margin micro-horizontal-margin" href={{ project.demo }} target="_blank">demo</a>
+            {% else %}
+              <a class="btn btn-info small-vertical-margin micro-horizontal-margin" href={{ project.demo }} target="_blank">{{project.name}}</a>
+              <span>(not open-source)</span>
+            {% endif %}
           {% endif %}
           {% for tech in project.technologies %}
             <img class="app-icon" src="{{ site.data.technologies[tech].icon }}"/>
