--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@ title: Ilja Tkachuk
       </div>
       <p>
         Hello stranger, nice to meet you!
-        Sit down, relax and have a cup of Erlang.
+        Sit down, relax and have a cup of functional programming.
         My name is Ilja Tkachuk (also known as timCF).
-        I'm backend software developer, live in Tallinn, Estonia.
+        I'm software developer, live in Tallinn, Estonia.
         <br><br>
         {{ site.data.content.summary_p1 }}
         <br><br>
