download link for video

--- a/index.html
+++ b/index.html
@@ -187,11 +187,16 @@ title: Ilja Tkachuk
         </div>
         <div class="col-sm-6 col-xs-12">
           <div class="margin-top hidden-sm hidden-md hidden-lg"></div>
-          <a class="btn btn-default small-margin-bottom disabled inline">
+          <a class="btn btn-default margin-bottom disabled inline">
             {{ talk.title }}
           </a>
-          <a class="btn btn-info small-margin-bottom" href={{ talk.slides_url }} target="_blank">
-            slides
+          <br>
+          <a class="btn btn-info margin-bottom" href={{ talk.slides_url }} target="_blank">
+            open slides
+          </a>
+          <br>
+          <a class="btn btn-info margin-bottom" href={{ talk.video_url }} target="_blank">
+            download video
           </a>
           <div class="margin-bottom hidden-sm hidden-md hidden-lg"></div>
           <h4 class="micro-vertical-margin margin-bottom">
