--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@ title: Ilja Tkachuk
 </div>
 
 <!-- Talks + Social -->
-<div class="container-fluid app-blue-bg">
-  <div class="row jumbotron app-block" id="talks">
+<div class="container-fluid app-blue-bg" id="talks">
+  <div class="row jumbotron app-block">
       <div class="col-sm-12">
         <div class="page-header">
           <h1>Talks</h1>
