refacor icons img -> fonts WIP

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: Ilja Tkachuk
       <div class="dropdown tnsl-flickerQuick">
         <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
           <strong>MENU</strong>
-          <span class="fa fa-bars fa-2x"></span>
+          <span class="fas fa-bars fa-2x"></span>
         </button>
         <ul class="dropdown-menu">
           <li><a href="#summary">Summary</a></li>
@@ -225,7 +225,7 @@ title: Ilja Tkachuk
       <div class="col-xs-12 text-center">
         {% for link in site.data.links %}
           <a href={{ link.url }} class="btn btn-primary micro-horizontal-margin" target="_blank">
-            <span class="fa {{ link.icon }} fa-2x micro-vertical-margin"></span>
+            <span class="fab {{ link.icon }} fa-2x micro-vertical-margin"></span>
           </a>
         {% endfor %}
       </div>
