fix homepage urls

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ title: Ilja Tkachuk
           <li><a href="#contacts">Contacts</a></li>
           <li class="divider"></li>
           <li><a href="https://github.com/timCF?tab=repositories" target="_blank">Github</a></li>
-          <li><a href="https://timcf.github.io/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
+          <li><a href="https://itkach.uk/erlang-universe/index.html#1" target="_blank">Erlang-Universe</a></li>
           <li><a href="https://habrahabr.ru/users/strain/topics/" target="_blank">Habrahabr</a></li>
           <li><a href="official.html" target="_blank">Official-CV</a></li>
         </ul>
@@ -160,7 +160,6 @@ title: Ilja Tkachuk
               <a class="btn btn-info small-vertical-margin micro-horizontal-margin" href={{ project.demo }} target="_blank">demo</a>
             {% else %}
               <a class="btn btn-info small-vertical-margin micro-horizontal-margin" href={{ project.demo }} target="_blank">{{project.name}}</a>
-              <span class="small-left-margin">(not open-source)</span>
             {% endif %}
           {% endif %}
           <div class="small-left-margin"></div>
