--- a/official.html
+++ b/official.html
@@ -159,7 +159,7 @@ title: Ilja Tkachuk
       {% endfor %}
       <li>
         <strong>Homepage</strong>:
-        <i><a href="https://timcf.github.io" target="_blank">https://timcf.github.io</a></i>
+        <i><a href="https://itkach.uk" target="_blank">https://itkach.uk</a></i>
       </li>
     </ul>
   </section>
